src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/function_type_in_expression.sol
contract test {
  function f(uint x, uint y) returns (uint a) {}
  function g() {
    function (uint, uint) internal returns (uint) f1 = f;
  }
}