src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/function_type_as_storage_variable_with_modifiers.sol
contract test {
  function (uint, uint) modifier1() returns (uint) f1;
}